ServicesAndNetworking/1-Services.yaml

port is mandatory. if you did not define targetport then it is assumend as same as port(if not defined). 
And nodeport will be assumed as any free port from 30000-32767.



apiVersion: v1
kind: Service
metadata:
  name: webapp-service
spec:
  type: NodePort
  ports:
    - targetPort: 8080
      port: 8080
      nodePort: 30080
  selector:
    name: simple-webapp
