ServicesAndNetworking/4-NetworkPolicies.yaml
apiVersion: network.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
  namespace: prod
spec:
  podSelector:
    matchLabels:
	  role: db
	policyTypes:
	- Ingress
	- Egress
	ingress:
	- from:
	  - podSelector:
	      matchLabels:
		    name: api-pod
	  - namespaceSelector:
	      matchLabels:
		    name: staging
	  - ipBlock:
	      cidr: 192.168.5.10/32
	  ports:
	  - protocol: TCP
	    port: 3306
	egress:
	- to:
	  - ipBlock:
	      cidr: 192.168.5.10/32
	  ports:
	  - protocol: TCP
	    port: 80
	    
-----------------

Run the command: kubectl get networkpolicy or kubectl get netpol

--------------------------------
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: internal-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      name: internal
  policyTypes:
  - Egress
  - Ingress
  ingress:
    - {}
  egress:
  - to:
    - podSelector:
        matchLabels:
          name: mysql
    ports:
    - protocol: TCP
      port: 3306

  - to:
    - podSelector:
        matchLabels:
          name: payroll
    ports:
    - protocol: TCP
      port: 8080
